# radiola

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/radiola/: __about__.py  __init__.py  entry_points.py  radiola.py
src/radiola/services/: player.py
src/radiola/utils/: check_libmpv.py
tests/: __init__.py
