[project]
name = "radiola"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maxim (neiromaster) Gavrilenko", email = "parrysh@mail.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mpv>=1.0.7",
    "textual>=1.0.0",
]

[project.scripts]
radiola = "radiola:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "textual-dev>=1.7.0",
]

[project.urls]
Documentation = "https://github.com/neiromaster/radiola#readme"
Issues = "https://github.com/neiromaster/radiola/issues"
Source = "https://github.com/neiromaster/radiola"
